overflow on mobile view fixed

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -217,8 +217,10 @@ html {
     display: none;
   }
   .main .container{
+    position: relative;
+    padding: 10px;
     header{
-    
+      padding: 0;
       .details{
         .ico{
           display: none;
@@ -233,10 +235,11 @@ html {
       height: 100%;
       width: 100%;
       background: #fff;
+      padding: 0;
       .form{
         position: fixed;
         bottom: 5px;
-        width: 90%;
+        width: 95%;
       }
     }
   }
